# longhaul

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
.smoke/: job.yaml
.smoke/data/: dataset.jsonl  tool_catalog.json
examples/: README.md
examples/chat-minimal/: job.yaml
examples/chat-minimal/data/: dataset.jsonl
examples/chat-minimal/jobs/20260503-130211-chat-minimal-example/: config.snapshot.yaml
examples/chat-minimal/jobs/20260503-130211-chat-minimal-example/compiled/: dataset_manifest.json
examples/chat-minimal/jobs/20260503-130307-chat-minimal-example/: config.snapshot.yaml  mlx-lora-config.yaml
examples/chat-minimal/jobs/20260503-130307-chat-minimal-example/compiled/: train.jsonl
examples/chat-minimal/jobs/20260503-130406-chat-minimal-example/: config.snapshot.yaml  mlx-lora-config.yaml
examples/chat-minimal/jobs/20260503-130600-chat-minimal-example/: config.snapshot.yaml  mlx-lora-config.yaml
examples/chat-minimal/jobs/20260503-131042-chat-minimal-example/: config.snapshot.yaml  metrics.jsonl  mlx-lora-config.yaml  report.md
examples/chat-minimal/jobs/20260503-131042-chat-minimal-example/adapters/: adapter_config.json
examples/chat-minimal/jobs/20260503-131042-chat-minimal-example/samples/: sample-1.txt  sample-2.txt
examples/glm5-plain-100/: job.yaml
examples/glm5-plain-100/data/: source_metadata.json  test.jsonl  train.jsonl  valid.jsonl
examples/tool-call/: job.yaml
examples/tool-call/data/: dataset.jsonl  tool_catalog.json
examples/tool-call/jobs/20260503-130222-tool-call-example/: config.snapshot.yaml
examples/tool-call/jobs/20260503-130222-tool-call-example/compiled/: dataset_manifest.json  train.jsonl
scripts/: prepare_glm5_reasoning_subset.py
src/longhaul/: __init__.py  __main__.py  cli.py  compiler.py  config.py  dataset.py  gguf.py  importers.py  registry.py  reports.py  runner.py
src/teich_tune/: __init__.py  __main__.py  cli.py  compiler.py  config.py  dataset.py  gguf.py  importers.py  reports.py  runner.py
src/teich_tune.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_dataset.py  test_importers.py  test_runner.py
