[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "teich-tune"
version = "0.1.0"
description = "Apple-first Qwen fine-tune job runner with a strict TeichAI dataset format."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.optional-dependencies]
train = ["mlx-lm[train]>=0.31.0"]

[project.scripts]
teich-tune = "teich_tune.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
