[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "longhaul"
version = "0.1.0"
description = "Long Haul by TEI: simple local CLI for preparing and training MLX fine-tunes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TEI" }]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
train = ["mlx-lm[train]>=0.31.0"]

[project.scripts]
longhaul = "longhaul.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
