[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "longhaul"
version = "0.1.0"
description = "Long Haul by TEI: simple local CLI for preparing and training MLX fine-tunes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TEI" }]
keywords = ["cli", "fine-tuning", "mlx", "llm", "training", "qwen"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Build Tools",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/owenqwenstarsky/longhaul"
Repository = "https://github.com/owenqwenstarsky/longhaul"
Issues = "https://github.com/owenqwenstarsky/longhaul/issues"

[project.optional-dependencies]
train = ["mlx-lm[train]>=0.31.0"]

[project.scripts]
longhaul = "longhaul.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
